Added new ATBS notes, and 003.

--- a/000 Data Science Group Syllabus.ipynb
+++ b/000 Data Science Group Syllabus.ipynb
@@ -11,8 +11,8 @@
     "### Part 1 - General Python\n",
     "| Session | Date | Classroom Topic | Homework |\n",
     "|:----:|----|----|----|\n",
-    "| 1 | 2016-01-12 | Intro. to Python and IPython | ATBS Chapter 1 |\n",
-    "| 2 | 2016-01-14 | Review ATBS Chap. 1, [Sample Notebook](http://nbviewer.ipython.org/github/rhiever/Data-Analysis-and-Machine-Learning-Projects/blob/master/example-data-science-notebook/Example%20Machine%20Learning%20Notebook.ipynb), and Group Planning | ATBS 2 & 3 |\n",
+    "| 1 | 2016-01-12 | Intro. to Python and IPython | [ATBS](https://automatetheboringstuff.com/) Chapter 1 |\n",
+    "| 2 | 2016-01-14 | Review ATBS Chap. 1, [Example ML Notebook](http://nbviewer.ipython.org/github/Sz593/PPA_Notes/tree/master/), and Group Planning | ATBS 2 & 3 |\n",
     "| 3 | 2016-01-19 | Review ATBS 2 & 3, Math in Python| ATBS 4 |\n",
     "| 4 | 2016-01-21 | Lists, Tuples, Sets, Built-in Functions/Constants 1| ATBS 5 |\n",
     "| 5 | 2016-01-26 | Reading and writing from files, csv Module, Lambda Functions | ATBS 6 |\n",
