Added 006 class notes.

--- a/000 Data Science Group Syllabus.ipynb
+++ b/000 Data Science Group Syllabus.ipynb
@@ -16,8 +16,8 @@
     "| 3 | 2016-01-19 | Review ATBS 2 & 3, Math in Python| ATBS 4 |\n",
     "| 4 | 2016-01-21 | Lists, Tuples, Sets, Built-in Functions/Constants 1| ATBS 5 |\n",
     "| 5 | 2016-01-26 | Reading and writing from files, csv Module, Lambda Functions | ATBS 6 |\n",
-    "| 6 | 2016-01-28 | Built-in Functions 2, Comprehensions, and Magic Functions | ATBS 10 - Debugging |\n",
-    "| 7 | 2016-02-02 | Standard Library 1 - Data Types, shelve, os, io, sys | DMWP 2 - Graphing |\n",
+    "| 6 | 2016-01-28 | Built-in Functions 2, Comprehensions, and Magic Functions | DMWP 2 - Graphing |\n",
+    "| 7 | 2016-02-02 | Standard Library 1 - Data Types, shelve, os, io, sys |  |\n",
     "| 8 | 2016-02-04 | Generators, collections Module | Read OOP [Blog Entry](http://inventwithpython.com/blog/2014/12/02/why-is-object-oriented-programming-useful-with-an-role-playing-game-example/) |\n",
     "| 9 | 2016-02-09 | Classes and Object-Oriented Programming | Start Analysis Course |\n",
     "\n",
