Updated syllabus; added 007 - Basic Graphing.

--- a/006 Comprehensions, Built-in Functions 2, and Magic Functions.ipynb
+++ b/006 Comprehensions, Built-in Functions 2, and Magic Functions.ipynb
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -637,12 +637,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1000000 loops, best of 3: 667 ns per loop\n"
+      "The slowest run took 6.79 times longer than the fastest. This could mean that an intermediate result is being cached \n",
+      "1000000 loops, best of 3: 698 ns per loop\n"
      ]
     }
    ],
    "source": [
-    "%%timeit # time the map functoin\n",
+    "%%timeit # time the map function\n",
     "map(lambda x: x**2, range(1, 11))"
    ]
   },
