--- a/000 Data Science Group Syllabus.ipynb
+++ b/000 Data Science Group Syllabus.ipynb
@@ -17,14 +17,15 @@
     "| 4 | 2016-01-21 | Lists, Tuples, Sets, Built-in Functions/Constants 1| ATBS 5 |\n",
     "| 5 | 2016-01-26 | Reading and writing from files, csv Module, Lambda Functions | ATBS 6 |\n",
     "| 6 | 2016-01-28 | Built-in Functions 2, Comprehensions, and Magic Functions | DMWP 2 - Graphing |\n",
-    "| 7 | 2016-02-02 | Standard Library 1 - Data Types, shelve, os, io, sys |  |\n",
-    "| 8 | 2016-02-04 | Generators, collections Module | Read OOP [Blog Entry](http://inventwithpython.com/blog/2014/12/02/why-is-object-oriented-programming-useful-with-an-role-playing-game-example/) |\n",
-    "| 9 | 2016-02-09 | Classes and Object-Oriented Programming | Start Analysis Course |\n",
+    "| 7 | 2016-02-02 | Introduction to Graphing in `matplotlib` and Working Session | Read OOP [Blog Entry](http://inventwithpython.com/blog/2014/12/02/why-is-object-oriented-programming-useful-with-an-role-playing-game-example/) |\n",
+    "| 8 | 2016-02-04 | Classes and OOP, Generators, collections Module, and Working Session | TBD |\n",
+    "| 9 | 2016-02-09 | Working Session | TBD |\n",
+    "| 10 | 2016-02-11| Working Session | TBD |\n",
     "\n",
     "### Part 2 - Data Analysis in Python\n",
     "| Session | Date | Classroom Topic | Homework |\n",
     "|:----:|----|----|----|\n",
-    "| 10 | 2016-02-11 | TBD | TBD |\n",
+    "| 11 | 2016-02-16 | TBD | TBD |\n",
     "\n",
     "### Part 3 - Data Science in Python\n",
     "\n",
