--- a/000 Data Science Group Syllabus.ipynb
+++ b/000 Data Science Group Syllabus.ipynb
@@ -18,7 +18,7 @@
     "| 5 | 2016-01-26 | Reading and writing from files, csv Module, Lambda Functions | ATBS 6 |\n",
     "| 6 | 2016-01-28 | Built-in Functions 2, Comprehensions, and Magic Functions | DMWP 2 - Graphing |\n",
     "| 7 | 2016-02-02 | Introduction to Graphing in `matplotlib` and Working Session | Read OOP [Blog Entry](http://inventwithpython.com/blog/2014/12/02/why-is-object-oriented-programming-useful-with-an-role-playing-game-example/) |\n",
-    "| 8 | 2016-02-04 | Classes and OOP, Generators, collections Module, and Working Session | TBD |\n",
+    "| 8 | 2016-02-04 | Classes and OOP, Generators, collections Module, and Working Session | Read [Pyplot Tutorial](http://matplotlib.org/users/pyplot_tutorial.html) |\n",
     "| 9 | 2016-02-09 | Working Session | TBD |\n",
     "| 10 | 2016-02-11| Working Session | TBD |\n",
     "\n",
