Updated syllabus, added notes for 014.

--- a/000 Data Science Group Syllabus.ipynb
+++ b/000 Data Science Group Syllabus.ipynb
@@ -25,16 +25,23 @@
     "### Part 2 - Data Analysis in Python\n",
     "| Session | Date | Classroom Topic | Homework |\n",
     "|:----:|----|----|----|\n",
-    "| 11 | 2016-02-16 | Review Topics, Begin Data Analysis in Python (DAP) Udacity Course | DAP Lesson 1 |\n",
-    "| X | 2016-02-18 | CANCELLED  | X |\n",
-    "| 12 | 2016-02-23 | Data Analysis in Python Lesson 1 Review | DAP Lesson 2 |\n",
-    "| 13 | 2016-02-25 | Simon's Introduction to NumPy | DAP Lesson 2 |\n",
+    "| 11 | 2016-02-16 | Review Topics, Begin Data Analysis in Python (DAP) Udacity Course | Data Analysis in Python Lesson 1 |\n",
+    "| X | 2016-02-18 | CANCELLED  | Finish DAP Lesson 1 |\n",
+    "| 12 | 2016-02-23 | DAP L1 Review - Exploring Location Alignment Data as a Team | Start DAP Lesson 2 |\n",
+    "| 13 | 2016-02-25 | Explore Data - Anscombe's Quartet | Finish DAP Lesson 2 |\n",
+    "| 14 | 2016-03-01 | String Formatting, Running .py Files | Start DAP Lesson 3 (2 weeks) | \n",
+    "| 15 | 2016-03-03 | Begin Introduction to NumPy and Review Graphing in Matplotlib | Continue DAP Lesson 3 |\n",
+    "| 16 | 2016-03-08 | Continue Introduction to NumPy, Begin Introduction to Pandas | Finish DAP Lesson 3 |\n",
+    "| 17 | 2016-03-10 | Continue Introduction to Pandas, Plotting in Pandas, Introduction to Seaborn | TBD|\n",
+    "| 18 | 2016-03-15 | Finish Introduction to Pandas, Continue Introduction to Seaborn  | TBD |\n",
+    "| 19 | 2016-03-17 | Finish Introduction to Seaborn | TBD |\n",
     "\n",
     "### Part 3 - Data Science in Python\n",
     "\n",
     "| Session | Date | Classroom Topic | Homework |\n",
     "|:----:|:----:|:----:|:----:| \n",
-    "| X | X | X | X |\n",
+    "| 20 | 2016-03-22 | TBD | TBD |\n",
+    "| 21 | 2016-03-24 | TBD | TBD |\n",
     "\n",
     "### Part 4 - Machine Learning\n",
     "\n",
@@ -116,7 +123,36 @@
     "17. Plotting in Pandas\n",
     "18. Conclusion\n",
     "\n",
-    "### Lesson 3: NumPy and Pandas for 2D Data"
+    "### Lesson 3: NumPy and Pandas for 2D Data\n",
+    "\n",
+    "1. Introduction\n",
+    "2. Subway Data\n",
+    "3. Two-Dimensional NumPy Arrays\n",
+    "4. NumPy Axis\n",
+    "5. NumPy and Pandas Data Types\n",
+    "6. Accessing Elements of a Data Frame\n",
+    "7. Loading Data into a Data Frame\n",
+    "8. Calculating Correlation\n",
+    "9. Pandas Axis Names\n",
+    "10. DataFrame Vectorized Operations\n",
+    "11. DataFrame `applymap()`\n",
+    "12. DataFrame `apply()`\n",
+    "13. DataFrame `apply()` Use Case 2\n",
+    "14. Adding a DataFrame to a Series\n",
+    "15. Standardizing Each Column Again\n",
+    "16. Pandas `groupby()`\n",
+    "17. Calculating Hourly Entries and Exits\n",
+    "18. Combining Pandas DataFrames\n",
+    "19. Plotting for DataFrames\n",
+    "20. Three-Dimensional Data\n",
+    "21. Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Intro to Data Science"
    ]
   }
  ],
@@ -136,7 +172,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
