Finished Intro to NumPy notes, updated syllabus.

--- a/000 Data Science Group Syllabus.ipynb
+++ b/000 Data Science Group Syllabus.ipynb
@@ -31,23 +31,23 @@
     "| 13 | 2016-02-25 | Explore Data - Anscombe's Quartet | Finish DAP Lesson 2 |\n",
     "| 14 | 2016-03-01 | String Formatting, Running .py Files | Start DAP Lesson 3 (2 weeks) | \n",
     "| 15 | 2016-03-03 | Begin Introduction to NumPy and Review Graphing in Matplotlib | Continue DAP Lesson 3 |\n",
-    "| 16 | 2016-03-08 | Continue Introduction to NumPy, Begin Introduction to Pandas | Finish DAP Lesson 3 |\n",
-    "| 17 | 2016-03-10 | Continue Introduction to Pandas, Plotting in Pandas, Introduction to Seaborn | TBD|\n",
-    "| 18 | 2016-03-15 | Finish Introduction to Pandas, Continue Introduction to Seaborn  | TBD |\n",
-    "| 19 | 2016-03-17 | Finish Introduction to Seaborn | TBD |\n",
+    "| 16 | 2016-03-08 | Continue Introduction to NumPy | Continue DAP Lesson 3 |\n",
+    "| 17 | 2016-03-10 | Finish Introduction to NumPy | Finish DAP Lesson 3 |\n",
+    "| 18 | 2016-03-15 | Begin Introduction to Pandas | No Homework |\n",
+    "| 19 | 2016-03-18 | Continue Introduction to Pandas, Plotting in Pandas, Introduction to Seaborn | TBD |\n",
+    "| 20 | 2016-03-22 | Finish Introduction to Seaborn | TBD |\n",
+    "| 21 | 2016-03-24 | working Session | TBD |\n",
     "\n",
     "### Part 3 - Data Science in Python\n",
     "\n",
     "| Session | Date | Classroom Topic | Homework |\n",
     "|:----:|:----:|:----:|:----:| \n",
-    "| 20 | 2016-03-22 | TBD | TBD |\n",
-    "| 21 | 2016-03-24 | TBD | TBD |\n",
+    "| 22 | 2016-03-29 | TBD | TBD |\n",
+    "| 23 | 2016-03-31 | TBD | TBD |\n",
     "\n",
     "### Part 4 - Machine Learning\n",
-    "\n",
-    "| Session | Date | Classroom Topic | Homework |\n",
-    "|:----:|:----:|:----:|:----:| \n",
-    "| X | X | X | X |"
+    "### Part 5 - Model Building & Validation\n",
+    "### Part 6 - Deep Learning"
    ]
   },
   {
