--- a/000 Data Science Group Syllabus.ipynb
+++ b/000 Data Science Group Syllabus.ipynb
@@ -34,16 +34,21 @@
     "| 16 | 2016-03-08 | Continue Introduction to NumPy | Continue DAP Lesson 3 |\n",
     "| 17 | 2016-03-10 | Finish Introduction to NumPy | Finish DAP Lesson 3 |\n",
     "| 18 | 2016-03-15 | Begin Introduction to Pandas | No Homework |\n",
-    "| 19 | 2016-03-18 | Continue Introduction to Pandas, Plotting in Pandas, Introduction to Seaborn | TBD |\n",
-    "| 20 | 2016-03-22 | Finish Introduction to Seaborn | TBD |\n",
-    "| 21 | 2016-03-24 | working Session | TBD |\n",
+    "| 19 | 2016-03-18 | Continue Introduction to Pandas | No Homework |\n",
+    "| 20 | 2016-03-22 | Working Session | No Homework |\n",
+    "| 21 | 2016-03-24 | Continue Introduction to Pandas | Review Rojas Pandas Lessons |\n",
+    "| 22 | 2016-03-29 | Continue Introduction to Pandas, Plotting in Pandas, Introduction to Seaborn | TBD |\n",
+    "| 23 | 2016-03-31 | Continue Introduction to Seaborn | TBD |\n",
+    "| 24 | 2016-04-05 | Finish Introduction to Seaborn | TBD |\n",
+    "| 25 | 2015-04-07 | Begin Introduction to Bokeh | TBD |\n",
+    "| 26 | 2015-04-12 | Finish Introduction to Bokeh | TBD |\n",
     "\n",
     "### Part 3 - Data Science in Python\n",
     "\n",
     "| Session | Date | Classroom Topic | Homework |\n",
     "|:----:|:----:|:----:|:----:| \n",
-    "| 22 | 2016-03-29 | TBD | TBD |\n",
-    "| 23 | 2016-03-31 | TBD | TBD |\n",
+    "| X | X | X | X | \n",
+    "\n",
     "\n",
     "### Part 4 - Machine Learning\n",
     "### Part 5 - Model Building & Validation\n",
