Added notes for DSP imputation, updated syllabus.

--- a/000 Data Science Group Syllabus.ipynb
+++ b/000 Data Science Group Syllabus.ipynb
@@ -37,17 +37,16 @@
     "| 19 | 2016-03-18 | Continue Introduction to Pandas | No Homework |\n",
     "| 20 | 2016-03-22 | Working Session | No Homework |\n",
     "| 21 | 2016-03-24 | Continue Introduction to Pandas | Review Rojas Pandas Lessons |\n",
-    "| 22 | 2016-03-29 | Continue Introduction to Pandas, Plotting in Pandas, Introduction to Seaborn | TBD |\n",
-    "| 23 | 2016-03-31 | Continue Introduction to Seaborn | TBD |\n",
-    "| 24 | 2016-04-05 | Finish Introduction to Seaborn | TBD |\n",
-    "| 25 | 2015-04-07 | Begin Introduction to Bokeh | TBD |\n",
-    "| 26 | 2015-04-12 | Finish Introduction to Bokeh | TBD |\n",
+    "| 22 | 2016-03-29 | Continue Introduction to Pandas, Plotting in Pandas, Introduction to Seaborn | X |\n",
     "\n",
     "### Part 3 - Data Science in Python\n",
     "\n",
     "| Session | Date | Classroom Topic | Homework |\n",
     "|:----:|:----:|:----:|:----:| \n",
-    "| X | X | X | X | \n",
+    "| 23 | 2016-03-31 | Continue Introduction to Seaborn | DSP Imputation Lessons (bold) |\n",
+    "| 24 | 2016-04-05 | Imputing Data, Finish Introduction to Seaborn | TBD |\n",
+    "| 25 | 2015-04-07 | Begin Introduction to Bokeh | TBD |\n",
+    "| 26 | 2015-04-12 | Finish Introduction to Bokeh | TBD |\n",
     "\n",
     "\n",
     "### Part 4 - Machine Learning\n",
@@ -157,7 +156,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Intro to Data Science"
+    "# Intro to Data Science\n",
+    "\n",
+    "### Lesson 2:\n",
+    "1. Welcome to Lesson 2\n",
+    "2. Nick - Introduction\n",
+    "3. What is Data Wrangling?\n",
+    "4. Analyzing Messy Data 1\n",
+    "5. Analyzing Messy Data 2\n",
+    "6. Nick's Experience with Data Wrangling\n",
+    "7. Acquiring Data\n",
+    "8. Common Data Formats\n",
+    "9. CSV Data 1\n",
+    "10. CSV Data 2\n",
+    "11. Quiz: CSV Exercise\n",
+    "12. What are Relational Databases?\n",
+    "13. Aadhaar Data\n",
+    "14. Quiz: Relational Databases\n",
+    "15. Aadhaar Data and Relational Databases\n",
+    "16. Introduction to Database Schemas\n",
+    "17. Quiz: Database Schema\n",
+    "18. Simple Queries\n",
+    "19. Quiz: Write Your Own Simple Query\n",
+    "20. Complex Queries 1\n",
+    "21. Complex Queries 2\n",
+    "22. Quiz: Write Your Own Complex Query\n",
+    "23. APIs\n",
+    "24. API Example\n",
+    "25. Data in JSON Format\n",
+    "26. How to Access an API Efficiently\n",
+    "27. Quiz: API Exercise\n",
+    "28. Sanity Checking Data\n",
+    "29. Pandas Describe Function\n",
+    "30. Quiz: Why Are Values Missing?\n",
+    "31. **Missing Values**\n",
+    "32. **Dealing with Missing Data**\n",
+    "33. **Why Impute**\n",
+    "34. **Easy Imputation**\n",
+    "35. **Impute Using Linear Regression**\n",
+    "36. **Quiz: Imputation Exercise**\n",
+    "37. **Tip of the Imputation Iceberg**\n",
+    "38. Assignment 2\n",
+    "39. Nick's Coolest Project\n",
+    "40. Recap"
    ]
   }
  ],
