Added seaborn notes and 2016-04-14 working session.

--- a/000 Data Science Group Syllabus.ipynb
+++ b/000 Data Science Group Syllabus.ipynb
@@ -37,16 +37,23 @@
     "| 19 | 2016-03-18 | Continue Introduction to Pandas | No Homework |\n",
     "| 20 | 2016-03-22 | Working Session | No Homework |\n",
     "| 21 | 2016-03-24 | Continue Introduction to Pandas | Review Rojas Pandas Lessons |\n",
-    "| 22 | 2016-03-29 | Continue Introduction to Pandas, Plotting in Pandas, Introduction to Seaborn | X |\n",
+    "| 22 | 2016-03-29 | Continue Introduction to Pandas, Plotting in Pandas, Introduction to Seaborn | No Homework |\n",
     "\n",
     "### Part 3 - Data Science in Python\n",
     "\n",
     "| Session | Date | Classroom Topic | Homework |\n",
     "|:----:|:----:|:----:|:----:| \n",
     "| 23 | 2016-03-31 | Continue Introduction to Seaborn | DSP Imputation Lessons (bold) |\n",
-    "| 24 | 2016-04-05 | Imputing Data, Finish Introduction to Seaborn | TBD |\n",
-    "| 25 | 2015-04-07 | Begin Introduction to Bokeh | TBD |\n",
-    "| 26 | 2015-04-12 | Finish Introduction to Bokeh | TBD |\n",
+    "| 24 | 2016-04-05 | Continue Introduction to Seaborn | TBD |\n",
+    "| 25 | 2016-04-07 | Discuss Enterprise Python, Finish Introduction to Seaborn | TBD |\n",
+    "| 26 | 2016-04-12 | Imputing Data, Choose Deep-Dive Modules & Datasets for Analysis | Choose your Dataset |\n",
+    "| 27 | 2016-04-14 | Working Session - Sample Data Analysis for Seaborn Tips Dataset | Bring in your Dataset |\n",
+    "| 28 | 2016-04-19 | Module (Mason) - `python-dateutil` and Working Session | Varies |\n",
+    "| 29 | 2016-04-21 | Module (Michelle) - `qgrid` and Working Session | Varies |\n",
+    "| 30 | 2016-04-26 | Module (Joel) - `fuzzywuzzy` and Working Session | Varies |\n",
+    "| 31 | 2016-05-03 | Module (Mason) - `dask` and Working Session | Varies |\n",
+    "| 32 | 2016-05-10 | Module (Michelle) - `bokeh` and Working Seession | Varies |\n",
+    "| 33 | 2016-05-12 | Module (Joe) - `nltk` and Working Session | Varies |\n",
     "\n",
     "\n",
     "### Part 4 - Machine Learning\n",
